# joi

./: .dockerignore  .env.example  .gitignore  CURRICULUM_SYSTEM.md  DEBUG_TOOLS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ultra-slim  LICENSE  Makefile  PRIVACY_POLICY.md  README.md  create_curriculum_tables.py  debug_dashboard.html  debug_tools.py  docker-compose.yml  instructions.txt  langgraph.json  pyproject.toml  railway.toml  test_connections.py  test_curriculum.py
data/: final_analysis_report.md
docs/: ASSESSMENT_SYSTEM.md  LINTING_REPORT.md  README.md  SYSTEM_IMPROVEMENTS.md
learnings/: cursor_cambios_en_el_despliegue_de_dock.md  cursor_mejoras_en_configuraci_n_y_dise.md  cursor_missing_environment_variables_er.md  cursor_problemas_con_railway_toml_y_pyp.md  cursor_remove_committed_file_from_git.md  cursor_soluci_n_de_problemas_con_docker.md
run/: setup.sh
scripts/: README.md  add_message_type_column.sql  assessment_tables.sql  create_assessment_tables.py  create_curriculum_tables.py  create_missing_tables.py  create_word_stats_table.sql  curriculum_tables.sql  debug_tools.py  fix_checkpoint_schema.py  init_database.py  init_db.sql  remove_learning_stats_table.sql  setup.sh  simplify_database.py  start.sh  update_database_schema.py
test/: README.md  comprehensive_system_test.py  test_assessment_system.py  test_connections.py  test_curriculum.py  test_postgres_checkpointer.py  test_whatsapp_api.py
tests/: test_curriculum_integration.py  test_database_operations.py  test_learning_integration.py  test_memory_manager.py  test_user_experience.py  (+1 more)
(+66 files in other folders)
