[project]
name = "joi-english-agent"
version = "0.1.0"
description = "Joi - AI agent for practicing English on WhatsApp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=1.50.3",
    "fastapi[standard]>=0.115.6",
    "groq>=0.13.1",
    "langchain-community>=0.3.13",
    "langchain-groq>=0.2.2",
    "langchain>=0.3.13",
    "pydantic==2.10.0",
    "together>=1.3.10",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.14",
    "pydantic-settings>=2.7.0",
    "supabase>=2.11.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "langgraph-checkpoint-postgres>=2.0.1",
    "qdrant-client>=1.12.1",
    "sentence-transformers>=3.3.1",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "langgraph-cli[inmem]>=0.2.10",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
